# sumoracle

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE.md  README.md  analyze_features.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml
app/: api.py  constants.py  urls.py  views.py
app/admin/: __init__.py  bout.py  division.py
app/migrations/: 0001_division.py  0001_initial.py  0002_populate_divisions.py  0003_basho.py  0003_bashohistory_meta.py  0004_add_shikona_fields.py  0004_bout_meta.py  0004_rank.py  0005_bout_meta.py  0005_heya_shusshin_rikishi.py  0006_add_models_meta.py  0006_bashohistory.py  0007_bout.py  0008_alter_rank_options_remove_rank_level.py  0009_alter_rikishi_options.py  0010_bashohistory_glicko.py  0010_bashorating.py  0011_bashorating_previous_fields.py  0012_rename_app_bashora_rikishi_e02e83_idx_app_bashora_rikishi_811c00_idx_and_more.py  0013_prediction.py
app/models/: __init__.py  basho.py  bout.py  division.py  history.py  prediction.py  rank.py  rating.py  rikishi.py  (+1 more)
config/: asgi.py  settings.py  urls.py  wsgi.py
libs/: api_utils.py  constants.py  glicko2.py  pagination.py  sumoapi.py
templates/: base.html  basho_detail.html  basho_list.html  division_detail.html  division_list.html  index.html  rikishi_detail.html  rikishi_list.html
tests/: test_admin.py  test_config.py  test_manage.py  test_models.py  test_models_extra.py  test_ranking_command.py  test_sumoapi.py  test_views.py
(+75 files in other folders)
