[project]
name = "sumoracle"
version = "0.1.0"
description = "A Sumo Prediction Engine"
requires-python = ">=3.12"

[tool.ruff]
line-length = 80
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = []

[tool.coverage.run]
source = ["app", "config", "libs"]
relative_files = true

[tool.coverage.report]
omit = ["*/migrations/*", "manage.py", "tests/*"]
fail_under = 50

[tool.isort]
profile = "django"
multi_line_output = 3
line_length = 80
known_first_party = ["app", "config", "libs", "tests"]
